--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ plotly==5.9.0
 streamlit==1.28.2
 streamlit-folium==0.15.0
 inflection==0.5.1
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+pillow==10.2.0
